web-api-java-jee/deployment/os4-kubernetes-deployment-v1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-api-v1
  labels:
    app: web-api  
spec:
  selector:                
    matchLabels:     
      app: web-api  
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true" 
      labels:
        app: web-api
        version: v1
    spec:
      containers:
      - name: web-api
        image: image-registry.openshift-image-registry.svc:5000/cloud-native-starter/web-api:1
        ports:
        - containerPort: 9080
        livenessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:9080/"]
          initialDelaySeconds: 20
        readinessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:9080/health | grep -q web-api"]
          initialDelaySeconds: 40
      restartPolicy: Always
---
