web-api-java-jee/deployment/kubernetes-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    webapi: "true"
  name: web-api
  labels:
    app: web-api
spec:
  selector:
    app: web-api
  ports:
    - port: 9080
      name: http
  type: NodePort
---
