web-api-java-jee/deployment/istio-service-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-api-v2
spec:
  hosts:
  - web-api
  http:
  - route:
    - destination:
        host: web-api
        subset: v1
      weight: 50
    - destination:
        host: web-api
        subset: v2
      weight: 50
---
